--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,8 @@ layout: default
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'thecodedeli';
+        var disqus_identifier = '{% if page.disqus_identifier %}{{ page.disqus_identifier}}{% else %}{{ site.url }}{{ page.url }}{% endif %}';
+        var disqus_url = '{{ site.url }}{{ page.url }}';
         
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
